apply plugin: 'java'
apply plugin: 'eclipse'

version = '1.0.0'
sourceCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.8.5'
    compile('com.sparkjava:spark-core:2.9.0')
    compile('com.sparkjava:spark-template-handlebars:2.7.1')
    compile('ch.qos.logback:logback-classic:1.2.3')
    testCompile('org.junit.jupiter:junit-jupiter:5.4.2')
    testCompile('org.assertj:assertj-core:3.11.1')
    compile("mysql:mysql-connector-java:8.0.16")
}